Fixed menu button not showing up

--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -2,3 +2,17 @@
 	display: grid;
 	grid-template-columns: 20rem 1fr;
 }
+
+.browser {
+	grid-template-columns: repeat(3, 1fr);
+}
+
+@media only screen and (max-width: 800px) and (max-aspect-ratio: 8/10) {
+	.container {
+		grid-template-columns: 1fr;
+	}
+
+	.browser {
+		grid-template-columns: 1fr;
+	}
+}
