--- a/styles/SideMenu.module.css
+++ b/styles/SideMenu.module.css
@@ -1,8 +1,5 @@
 .container {
-	position: sticky;
-	position: -webkit-sticky;
 	height: 100vh;
-	align-self: start;
 	top: 0;
 	display: grid;
 	grid-template-rows: 3rem 16rem 16rem 1fr 2rem;
@@ -18,6 +15,5 @@
 		box-shadow: 1rem 0rem 1rem #111122;
 		transition: 0.3s all;
 		grid-template-rows: 2rem 3rem 16rem 16rem 1fr 2rem;
-		overflow: auto;
 	}
 }
