--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html {
 
 html,
 body {
+	background-color: #0f172a;
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
